# riot-wot-sys

./: .gitmodules  Cargo.toml  README.md  build.rs
examples/wot-coap-generation/: Cargo.toml  Makefile  README.md
examples/wot-coap-generation/config/wot_td/: bindings.json  meta_data.json  thing_model.json
examples/wot-coap-generation/src/: lib.rs
src/: inline.rs  lib.rs
