[package]
name = "riot-wot-sys"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [lib]
# crate-type = ["staticlib"]

[dependencies]

[build-dependencies]
bindgen = "0.62.0"
lazy_static = "1.4.0"
fragile = "2.0.0"

[[example]]
name = "wot-coap-generation"
path = "examples/wot-coap-generation"
